--- a/chrome-extension-v2/css/style.css
+++ b/chrome-extension-v2/css/style.css
@@ -1,35 +1,42 @@
-.gameScreen p{
+#game {
+    display: none;
+}
 
+#gameScreen p {
     text-align: center;
     font-family: 'Courier New', monospace;
     font-size: large;
     font-weight: bold;
 }
-.awaitingResponse{
+
+.awaitingResponse {
     text-align: center;
-    padding:30px;
+    padding: 30px;
 }
-.awaitingResponse img{
+
+.awaitingResponse img {
     width: 50px;
     height: 50px;
-    padding:0;
+    padding: 0;
 }
-.awaitingResponse p{
-    padding:0;
+
+.awaitingResponse p {
+    padding: 0;
     border: 0;
-    margin:0;
-    color:#5fb3ed
+    margin: 0;
+    color: #5fb3ed
 }
 
-#stick , #twist {
-    display:inline-block;
-    width:45%
-    }
-#twist{
-    align-self:right;
+#stick,
+#twist {
+    width: 45%
 }
 
-.gameButtons{
+#twist {
+    align-self: right;
+}
+
+.gameButtons {
     margin: 10%;
     align-items: center;
 }
