added some server logic

--- a/chrome-extension-v2/css/style.css
+++ b/chrome-extension-v2/css/style.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+#lobby {
+    display: none;
+}
+
 #gameScreen p {
     text-align: center;
     font-family: 'Courier New', monospace;
