Turn based multiplayer setup, need to move win condition check to serverside

--- a/chrome-extension-v2/css/style.css
+++ b/chrome-extension-v2/css/style.css
@@ -1,7 +1,15 @@
 #game {
     display: none;
 }
-
+#error {
+    display: none;
+}
+#waitingForOpponent{
+    display:none;
+}
+.resultScreen {
+    display: none;
+}
 #lobby {
     display: none;
 }
