--- a/chrome-extension-v2/css/style.css
+++ b/chrome-extension-v2/css/style.css
@@ -7,10 +7,13 @@
 #waitingForOpponent{
     display:none;
 }
-.resultScreen {
+#resultScreen {
     display: none;
 }
 #lobby {
+    display: none;
+}
+#lobbySelect {
     display: none;
 }
 
