--- a/chrome-extension-v2/css/style.css
+++ b/chrome-extension-v2/css/style.css
@@ -1,10 +1,18 @@
+@font-face {
+    font-family: 'start2P';
+    src: url('../font/PressStart2P-Regular.ttf');
+}
+
 html {
     width: 350px;
     height: 400px;
 }
 
 body {
+    font-family: 'start2P' !important;
     background-color: light grey !important;
+    height:100% !important;
+    width:100% !important;
 }
 
 #game {
@@ -17,6 +25,12 @@ body {
 
 #waitingForOpponent {
     display: none;
+    text-align: center;
+}
+#waitingForOpponent img {
+    position:absolute;
+    bottom:35px;
+    left: 75px;
 }
 
 #resultScreen {
@@ -24,7 +38,16 @@ body {
 }
 
 #lobby {
+    width:100%;
+    height: 100%;
     display: none;
+}
+
+#activeGames button {
+    text-align: center;
+    font-size: small;
+
+
 }
 
 #lobbySelect {
@@ -33,20 +56,44 @@ body {
     padding-right: 40px;
 }
 
+#lobbyLabel{
+    text-align: center;
+}
+#readyBtnDiv{
+    padding-top:50px;
+    text-align: center;
+}
+#ready-img{
+    height:20%;
+    width:20%;
+    padding-bottom: 30px;
+}
+#ready-div{
+    display:none;
+}
+#ready-text{
+    
+    color:green;
+}
+
 #createbtnDiv {
-    padding-top: 10px;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
 }
 
 #admin {
     position: absolute;
     bottom: 0px;
+    right:0px
 }
 
 #gameScreen p {
     text-align: center;
-    font-family: 'Courier New', monospace;
+
     font-size: large;
     font-weight: bold;
+    padding-top:20px
 }
 
 .awaitingResponse {
@@ -70,6 +117,7 @@ body {
 #gameSelectTitle {
     text-align: center;
     padding-top: 10px;
+    padding-bottom:10px;
 }
 
 #stick,
